--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/CourseWork
 spring.datasource.username=root
 spring.datasource.password=rootroot
+trace=true
