--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/CourseWork
 spring.datasource.username=root
 spring.datasource.password=rootroot
-trace=true
+#trace=true
+
